# ICP_Othello

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  README.txt  init.sh  qt.conf
doc/: dox
gui/: celllabel.cpp  celllabel.hpp  dialog.cpp  dialog.hpp  dialog.ui  graphicaluserinterface.cpp  gui.pro  guidisk.cpp  guidisk.hpp  guiplayground.cpp  guiplayground.hpp  main.cpp  mainwindow.cpp  mainwindow.ui  resources.qrc
include/: celllabel.hpp  cligame.hpp  climenu.hpp  commandlineinterface.hpp  dialog.hpp  disk.hpp  game.hpp  game_manager.hpp  gameio.hpp  graphicaluserinterface.hpp  guidisk.hpp  mainwindow.hpp  move.hpp  player.hpp  playground.hpp  resources.hpp  userinterface.hpp
src/: CMakeLists.txt  Makefile  cligame.cpp  climenu.cpp  commandlineinterface.cpp  game.cpp  game_manager.cpp  gameio.cpp  hra2016-cli.cpp  main.cpp  playground.cpp  test.cpp
